@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.6.6"
-#define RUBY_RELEASE_DATE "2001-12-21"
+#define RUBY_RELEASE_DATE "2001-12-25"
 #define RUBY_VERSION_CODE 166
-#define RUBY_RELEASE_CODE 20011221
+#define RUBY_RELEASE_CODE 20011225
