@@ -1,3 +1,15 @@
+Tue Dec 25 23:28:47 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* stable version 1.6.6 released.
+
+Tue Dec 25 18:32:16 2001  K.Kosako  <kosako@sofnec.co.jp>
+
+	* re.c (rb_reg_search): initialize taint status of match object.
+
+Fri Dec 21 20:33:34 2001  K.Kosako  <kosako@sofnec.co.jp>
+
+	* parse.y (str_extend): make up "#$;" handling.
+
 Fri Dec 21 16:18:17 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>
 
 	* dln.h, ruby.h, util.h: enable prototypes in C++.
